Fix for alternative sources of Zend Framework.
To work with https://github.com/Shardj/zf1-future and similar repos.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "psy/psysh": "@stable",
-        "zendframework/zendframework1": "1.12.*",
+        "zendframework/zendframework1": "~1.12",
         "php": ">=5.3.0"
     },
     "require-dev": {
